--- a/assessts/css/index.css
+++ b/assessts/css/index.css
@@ -5,19 +5,19 @@
     font-family:sans-serif
     
 }
-header{
+header .menu{
     display:flex;
     align-items: center;
     padding: 0px 30px;
-    justify-content: space-between;
+    justify-content:space-between;
     position:absolute;
     top:30px;
     color:white;
-    width:100%;
+    margin:0 auto;
+    width: 100%;
 }
 
 header .logo {
-    color:white;
     text-transform: uppercase;
 }
 
@@ -62,6 +62,8 @@ header nav i{
     padding: 0px 30px;
     justify-content: center;
     
+    margin:0 auto;
+    
 }
 
 .cards-container .card{
@@ -102,22 +104,240 @@ header nav i{
 
 }
 
+/* smarts block start */
+
+.do-more-sec{
+    display: flex;
+    flex-direction: row;
+    background-color: #F2F1F2;
+}
+
+
+.easy-text-card{
+    background-color: whitesmoke;
+    padding: 30px;
+    border-radius: 10px;
+    margin-top: 40px;
+}
+  
+.do-more-sec img{
+    height: 100vh;
+    width: 50vw;
+}
+
+.section2-text-card{
+    padding: 50px;
+  }
+  
+  .u-text {
+    word-wrap: break-word;
+    position: relative;
+  }
+  
+  .u-text-1{
+    color: #ff214f;
+    word-wrap: break-word;
+    position: relative;
+    font-size: 30px;
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+  .u-text-2 {
+    margin: 20px 0 0;
+    font-size: 1.5rem;
+  }
+  .u-text-3 {
+    margin: 40px 0 0;
+    font-family: 'Open Sans',sans-serif;
+    line-height: 1.8;
+    color: #111111;
+  }
+  .u-text-4 {
+    margin: 30px 0 0;
+    font-size: 1.125rem;
+    font-weight: bold;
+  }
+  .u-text-5 {
+    font-size: 0.875rem;
+    font-style: italic;
+    margin: 20px 0 0;
+    line-height: 1.8;
+  }
+  .section2-card{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+    
+  }
+  
+  .creative-solutions-card{
+    margin-right:10px;
+    background-color:  whitesmoke;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  
+  .clean-card{
+    margin-left:10px;
+    background-color:  whitesmoke;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  
+
+
+
+
 /* digital-block start */
 
 .digital-block{
     display: flex;
+    min-height: 345px;
 }
 
-.digital-block .card1{
+.digital-block .card1,.card3{
     background-image: url('../images/c1.jpeg');
-    height: 345px;
-    
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex:0 0 25%;
+    max-width: 25%;
+    min-width: 25%;
 
 }
+
+.digital-block .card3{
+    background-image: url('../images/c2.jpeg');
+}
+
+.digital-block .card-d-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    background-color: black;
+   
+
+}
+
+.digital-block .card-d-text h5{
+    color:#ff214f;
+    margin: 30px 20px 0 0;
+    letter-spacing: 1px;
+    font-size: 1.1rem;
+
+}
+
+.digital-block .card-d-text h4{
+    color:white;
+    margin: 30px 20px 0 0;
+    line-height: 1.5rem;
+}
+
+.digital-block .card-d-text p{
+   font-style: italic;
+   color:#808080;
+   margin: 20px 20px 0 0;
+   line-height: 1.8rem;
+
+}
+.digital-block .card-d-text a{
+    margin: 30px auto 35px 0;
+    color:#ff214f;
+}
+
+/* gallery */
+
+.find-more-text{
+    text-align: center;
+    padding: 40px;
+  }
+  .img-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .img-container *{
+    padding: 15px;
+  }
+  .image-card{
+    height: 300px;
+    width: 300px;
+  }
+  
+  .find-more-text h5{
+    color: #ff214f;
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.125rem;
+  }
+  
+  .find-more-text h1{
+    color: #ff214f;
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.125rem;
+  }
+
+
+/* skilled Designers */
+.desig-sec{
+    background-image: url('../images/bg3.jpeg');
+    background-size: cover;
+    min-height: 500px;
+}
+
+.skills-container{
+    margin:0 auto;
+    padding: 50px 0px;
+       
+}
+
+.skills-container .card h5{
+    color:#ff214f;
+
+}
+
+.skills-container .card h2{
+    margin: 20px 0 0px;
+
+}
+
+.skills-container .card .mt-0{
+    margin: 0px 0 15px;
+}
+
+.skills-container .d-cards{
+     display: flex;
+     margin:10% 0px 0px 0px;
+ 
+}
+
+.skills-container .d-cards .subcard{
+    flex:0 0 30%; 
+    padding-left: 10px;
+    padding-right: 10px;  
+}
+
+.skills-container .d-cards .subcard p{
+    margin: 20px 40px 0 0;
+    line-height: 1.8;
+    color:#808080;
+    font-style: italic;
+    font-size: 0.875rem;
+
+}
+
+.skills-container .d-cards .subcard h6{
+    margin: 30px 40px 0 0;
+    font-size: 1.25rem;
+
+}
+
 
 /* media queries */
 @media(min-width:1402px){
-    header{
+    header .menu{
         padding: 0px 100px;
         width: 100%;
     }
@@ -128,6 +348,52 @@ header nav i{
     }
     .cards-sec{
         padding: 0 100px;
+    }
+    .skills-container{
+        width: 1120px;
+    }
+
+}
+
+
+@media(max-width:768px){
+
+    .do-more-sec img{
+        display: none;
+    }
+    .do-more-sec{
+        background-image: url('../images/bg2.jpeg');
+        background-color: transparent;
+    }
+
+    .digital-block{
+        flex-wrap: wrap;
+    }
+    .digital-block .card, .card1{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .cards-container{
+        flex-wrap: wrap;
+        
+    }
+    
+    .cards-container .card{
+        width:47%;
+    }
+    .skills-container{
+        width:720px;
+    }
+
+    .desig-sec{
+        background-position: 50%;
+    }
+}
+
+@media(max-width:1024px){
+    .img-container{
+        flex-wrap: wrap;
     }
 
 }
